--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "showdown": "^2.1.0",
     "sortablejs": "^1.15.0",
+    "rxjs": "^7.5.6",
     "tinymce": "^5.10.3",
     "vditor": "^3.8.13",
     "vue": "^3.2.33",
@@ -256,6 +257,9 @@
         "qrcode",
         "qs",
         "resize-observer-polyfill",
+        "rxjs",
+        "rxjs/ajax",
+        "rxjs/operators",
         "showdown",
         "sortablejs",
         "tinymce/icons/default/icons",
